syntax = "proto2";

package apollo.planning;

import "modules/planning/proto/dp_poly_path_config.proto";
import "modules/planning/proto/dp_st_speed_config.proto";
import "modules/planning/proto/qp_spline_path_config.proto";
import "modules/planning/proto/qp_st_speed_config.proto";
import "modules/planning/proto/poly_st_speed_config.proto";
import "modules/planning/proto/navi_path_decider_config.proto";
import "modules/planning/proto/navi_speed_decider_config.proto";
import "modules/planning/proto/navi_obstacle_decider_config.proto";
import "modules/planning/proto/planner_open_space_config.proto";

enum TaskType {
  DP_POLY_PATH_OPTIMIZER = 0;
  DP_ST_SPEED_OPTIMIZER = 1;
  QP_SPLINE_PATH_OPTIMIZER = 2;
  QP_SPLINE_ST_SPEED_OPTIMIZER = 3;
  PATH_DECIDER = 4;
  SPEED_DECIDER = 5;
  POLY_ST_SPEED_OPTIMIZER = 6;
  NAVI_PATH_DECIDER = 7;
  NAVI_SPEED_DECIDER = 8;
  NAVI_OBSTACLE_DECIDER = 9;
};

message PathDeciderConfig {
  // place holder
}

message ScenarioConfig {
  enum ScenarioType {
    LANE_FOLLOW = 0;  // default scenario
    CHANGE_LANE = 1;
    SIDE_PASS = 2;  // go around an object when it blocks the road
    APPROACH = 3;  // approach to an intersection
    INTERSECTION_STOP_SIGN_FOUR_WAY = 4;
    INTERSECTION_STOP_SIGN_ONE_OR_TWO_WAY = 5;
    INTERSECTION_TRAFFIC_LIGHT_LEFT_TURN = 6;
    INTERSECTION_TRAFFIC_LIGHT_RIGHT_TURN = 7;
    INTERSECTION_TRAFFIC_LIGHT_GO_THROUGH = 8;
  }
  optional ScenarioType scenario_type = 1;

  message ScenarioTaskConfig {
    optional TaskType task = 1;
    oneof task_config {
      DpPolyPathConfig dp_poly_path_config = 2;
      DpStSpeedConfig dp_st_speed_config = 3;
      QpSplinePathConfig qp_spline_path_config = 4;
      QpStSpeedConfig qp_st_speed_config = 5;
      PolyStSpeedConfig poly_st_speed_config = 6;
      PathDeciderConfig path_decider_config = 7;
    }
  }
  repeated ScenarioTaskConfig scenario_task_config = 2;
}

message PlannerOnRoadConfig {
  // supported scenario types
  repeated ScenarioConfig.ScenarioType scenario_type = 1;
}

message PlannerNaviConfig {
  repeated TaskType task = 1;
  optional NaviPathDeciderConfig  navi_path_decider_config = 2;
  optional NaviSpeedDeciderConfig  navi_speed_decider_config = 3;
  optional NaviObstacleDeciderConfig  navi_obstacle_decider_config = 4;
}

enum PlannerType {
  RTK = 0;
  ONROAD = 1;  // expectation maximization
  OPENSPACE = 2; // open space planner
  NAVI = 3; // navigation planner
}

message RtkPlanningConfig {
  optional PlannerType planner_type = 1;
}

message StandardPlanningConfig {
  repeated PlannerType planner_type = 1; // supported planners
  optional PlannerOnRoadConfig planner_onroad_config = 2;
}

message NavigationPlanningConfig {
  repeated PlannerType planner_type = 1; // supported planners
  optional PlannerNaviConfig planner_navi_config = 4;
}

message PlanningConfig {
  optional PlannerType planner_type = 1 [deprecated=true];
  optional PlannerNaviConfig planner_navi_config = 2;
  oneof planning_config {
    RtkPlanningConfig rtk_planning_config = 3;
    StandardPlanningConfig standard_planning_config = 4;
    NavigationPlanningConfig navigation_planning_config = 5;
  }
  // For end_condition_sampler.cc in Lattice Planner
  optional double LatEnd_d1 = 6;
  optional double LatEnd_d2 = 7;
  optional double LatEnd_d3 = 8;
  optional double LatEnd_d4 = 9;
  optional double LatEnd_d5 = 10;
  optional double LatEnd_d6 = 11;
  optional double LatEnd_d7 = 12;

  optional double LatEnd_s1 = 13;
  optional double LatEnd_s2 = 14;
  optional double LatEnd_s3 = 15;
  optional double LatEnd_s4 = 16;
  optional double LatEnd_s5 = 17;
  optional double LatEnd_s6 = 18;

  // For trajectory_generator.cc in Lattice Planner
  optional bool enable_cruising_trajectory = 19;
  optional bool enable_stopping_trajectory = 20;
  optional bool enable_pathtime_trajectory = 21;

  optional bool enable_speed_limit_overwrite = 22;
  optional double speed_limit_overwrite = 23;

  // For trajectory_evaluator.cc in Lattice Planner
  optional double lattice_weight_lon_objective = 24;
  optional double lattice_weight_lon_jerk = 25;
  optional double lattice_weight_lon_collision = 26;
  optional double lattice_weight_centripetal_acceleration = 27;
  optional double lattice_weight_lat_offset = 28;
  optional double lattice_weight_lat_comfort = 29;
  optional bool lattice_enable_cost_component_record = 30;
  optional double lat_overshoot_limit = 31;
  optional double centripedal_speed_limit = 32;

  // For lattice_planner.cc
  optional double cost_non_priority_ref_line = 33;


}
